# Discord-bot

./: Cargo.toml  Dockerfile
.github/Workflows/: discord-bot-updater.yml
.github/workflows/: discord-bot-updater.yml
config/: DiscordService.yaml
src/: main.rs
